@@ -82,7 +82,13 @@
     <li><span class="label label-success">Feature</span> Improve listing performance for versioned buckets (S3) (<a
         href="https://trac.cyberduck.io/ticket/10426">#10426</a>)
     </li>
-    <li><span class="label label-success">Feature</span> Add <tt>--profile</tt> option to select connection profile (CLI)</li>
+    <li><span class="label label-success">Feature</span> Add <tt>--profile</tt> option to select connection profile
+        (CLI)
+    </li>
+    <li><span class="label label-success">Feature</span> Add option to disable checksum verification for file transfers
+        (<a
+            href="https://trac.cyberduck.io/ticket/10215">#10215</a>)
+    </li>
     <li><span class="label label-warning">Bugfix</span> Stop button to interrupt transfer (<a
         href="https://trac.cyberduck.io/ticket/10363">#10363</a>)
     </li>
@@ -90,7 +96,9 @@
         successful connect (<a
             href="https://trac.cyberduck.io/ticket/10526">#10526</a>)
     </li>
-    <li><span class="label label-warning">Bugfix</span> Failure authenticating with proxy using Integrated Windows Authentication (IWA) authentication (WebDAV, Windows)</li>
+    <li><span class="label label-warning">Bugfix</span> Failure authenticating with proxy using Integrated Windows
+        Authentication (IWA) authentication (WebDAV, Windows)
+    </li>
     <li><span class="label label-warning">Bugfix</span> Updated localizations</li>
 
 </ul>
