@@ -8,6 +8,7 @@ https://cyberduck.io/
 - [Feature] Improve listing performance for versioned buckets (S3) (#10426)
 - [Feature] Add --profile option to select connection profile (CLI)
 - [Feature] Add --nochecksum option to skip verifying checksums (CLI)
+- [Feature] Add option to disable checksum verification for file transfers (#10215)
 - [Bugfix] Stop button to interrupt transfer (#10363)
 - [Bugfix] Save passphrase for private key in keychain only after successful connect (#10526)
 - [Bugfix] Failure authenticating with proxy using Integrated Windows Authentication (IWA) authentication (WebDAV, Windows)
